# ninja-so-fancy

./: .gitignore  README.md  demo.tape  main.py  pyproject.toml
