[project]
name = "ninja-so-fancy"
dynamic = ["version"]
description = "ninja build output for humans"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["psutil>=7.1.3", "rich>=14.2.0"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[project.scripts]
ninja-so-fancy = "main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
ninja-so-fancy = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
psutil = ">=7.1.3,<8"
rich = ">=14.2.0,<15"
ninja = ">=1.13.1,<2"
